# nova

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cbindgen.toml  index.html  package.json
.claude/plans/: phase-8-11-implementation.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.project_docs/: NOTES.md
assets/: nova.desktop  theme.toml
assets/icons/: nova.icns
benches/: performance.rs
crates/nova/: Cargo.toml
crates/nova-core/: Cargo.toml
crates/nova-core/src/: config.rs  error.rs  executor.rs  lib.rs  search.rs  theme.rs
crates/nova-core/src/services/: calculator.rs  clipboard.rs  custom_commands.rs  emoji.rs  extension.rs  extensions.rs  file_search.rs  format.rs  mod.rs  units.rs
crates/nova-platform/: Cargo.toml
crates/nova-platform/src/: lib.rs  shared.rs  traits.rs
crates/nova-platform/src/linux/: app_discovery.rs  mod.rs  system_commands.rs
crates/nova-platform/src/macos/: mod.rs
crates/nova-platform/src/windows/: mod.rs
crates/nova-ui/: Cargo.toml
crates/nova-ui/src/: app.rs  execute.rs  lib.rs  subscriptions.rs
crates/nova-ui/src/settings/: mod.rs
crates/nova-ui/src/style/: theme.rs
crates/nova-ui/src/widgets/: mod.rs
crates/nova/src/: main.rs
docs/: extension-development.md  spec.md  tasks.json  type-sync.md
examples/: nova_cli.rs  test_extension.rs
frontends/macos/: project.yml
frontends/macos/Nova/: AppDelegate.swift  NovaApp.swift
frontends/macos/Nova.xcodeproj/: project.pbxproj
frontends/macos/Nova/Core/: ExtensionModels.swift  Models.swift  NovaCore.swift  Theme.swift
frontends/macos/Nova/Extension/: ActionPanelBar.swift  ExtensionDetailView.swift  ExtensionFormView.swift  ExtensionListCell.swift  ExtensionListView.swift  NavigationStack.swift
frontends/macos/Nova/Hotkey/: HotkeyManager.swift
frontends/macos/Nova/Panel/: SearchPanel.swift
frontends/macos/Nova/Permissions/: PermissionConsentView.swift  PermissionsManagerView.swift
frontends/macos/Nova/Supporting/: Info.plist  Nova-Bridging-Header.h  nova.h
include/: nova.h
nova-registry/: .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml
nova-registry/migrations/: 20240101000000_initial.sql
nova-registry/src/: main.rs
nova-registry/src/api/: admin.rs  auth.rs  extensions.rs  mod.rs  publishers.rs
nova-registry/src/db/: mod.rs  models.rs  queries.rs
nova-registry/src/scanning/: mod.rs
nova-registry/src/storage/: mod.rs
sample-extensions/quick-notes/: nova.toml  package-lock.json  package.json  tsconfig.json
sample-extensions/quick-notes/src/: index.tsx  nova.d.ts
scripts/: build-macos.sh  check-types.ts  setup-hotkey.sh
src/: App.css  App.tsx  config.rs  error.rs  executor.rs  ffi.rs  lib.rs  main.rs  main_iced.rs  search.rs  settings.rs  theme.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  settings.rs
src-tauri/src/services/: app_index.rs  custom_commands.rs  mod.rs
src/cli/: build.rs  create.rs  dev.rs  install.rs  mod.rs  registry.rs
src/components/: SearchInput.tsx
src/core/: mod.rs  search.rs
src/extensions/: background.rs  error.rs  host.rs  isolate.rs  manifest.rs  mod.rs  permissions.rs  storage.rs
src/extensions/components/: action.rs  common.rs  detail.rs  form.rs  list.rs  mod.rs  validation.rs
src/extensions/ipc/: context.rs  macros.rs  mod.rs  ops.rs  types.rs
src/extensions/js/: runtime.js
src/gtk/: exec.rs  ipc.rs  mod.rs  shortcut.rs  state.rs  window.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/services/: app_index.rs  browser.rs  calculator.rs  clipboard.rs  custom_commands.rs  emoji.rs  extension.rs  extensions.rs  file_search.rs  format.rs  frecency.rs  mod.rs  units.rs
src/ui/: app.rs  hotkey.rs  mod.rs  settings.rs  single_instance.rs  style.rs  theme.rs
