[package]
name = "nova"
version = "0.1.0"
description = "Keyboard-driven productivity launcher"
authors = ["rusen"]
edition = "2021"

[lib]
name = "nova"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "nova"
path = "src/main.rs"
required-features = ["gtk-ui"]

[[bin]]
name = "nova-iced"
path = "src/main_iced.rs"
required-features = ["iced-ui"]

[features]
default = []  # Library only by default, native frontends use FFI
gtk-ui = ["gtk", "gdk", "glib", "gio", "pango"]
iced-ui = ["iced", "global-hotkey", "arboard", "interprocess", "ctrlc", "tokio"]

[dependencies]
# GTK UI (Linux legacy, optional)
gtk = { version = "0.18", features = ["v3_24"], optional = true }
gdk = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
gio = { version = "0.18", optional = true }
pango = { version = "0.18", optional = true }

# iced UI (cross-platform, optional)
iced = { version = "0.13", optional = true, features = ["tokio"] }
global-hotkey = { version = "0.6", optional = true }
arboard = { version = "3.4", optional = true }
interprocess = { version = "2", optional = true, features = ["tokio"] }

# App launcher (Linux-specific, but compiles on all platforms)
freedesktop-desktop-entry = "0.7"
fuzzy-matcher = "0.3"
dirs = "5"
walkdir = "2"

# Utils
once_cell = "1"
ctrlc = { version = "3.4", optional = true }
tokio = { version = "1", optional = true, features = ["time", "sync"] }

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Custom commands
shellexpand = "3"
urlencoding = "2"

# Calculator
meval = "0.2"

# macOS window management (modern objc2 crates)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSView", "NSApplication", "NSResponder"] }
objc2-foundation = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
