[package]
name = "nova"
version = "0.1.0"
description = "Keyboard-driven productivity launcher"
authors = ["rusen"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rusenbb/nova"
homepage = "https://github.com/rusenbb/nova"
keywords = ["launcher", "productivity", "raycast", "spotlight", "alfred"]
categories = ["command-line-utilities", "gui"]
readme = "README.md"

[lib]
name = "nova"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "nova"
path = "src/main.rs"
required-features = ["gtk-ui"]

[features]
default = []  # Library only by default, native frontends use FFI
gtk-ui = ["gtk", "gdk", "glib", "gio", "pango"]

[dependencies]
# GTK UI (Linux, optional)
gtk = { version = "0.18", features = ["v3_24"], optional = true }
gdk = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
gio = { version = "0.18", optional = true }
pango = { version = "0.18", optional = true }

# Core dependencies
freedesktop-desktop-entry = "0.7"
fuzzy-matcher = "0.3"
dirs = "5"
walkdir = "2"
once_cell = "1"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Custom commands
shellexpand = "3"
urlencoding = "2"

# Calculator
meval = "0.2"

# Extension runtime
deno_core = "0.311"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs"] }
thiserror = "1"
anyhow = "1"
url = "2"
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
notify = "6"
notify-debouncer-mini = "0.4"
ctrlc = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "performance"
harness = false
