[workspace]
resolver = "2"
members = ["crates/nova", "crates/nova-core", "crates/nova-platform", "crates/nova-ui"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["rusen"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6"
thiserror = "2"
