[package]
name = "nova-registry"
version = "0.1.0"
edition = "2021"
description = "Extension registry server for Nova launcher"
authors = ["rusen"]
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9"
oauth2 = "4"

# Storage (S3/R2)
aws-config = "1"
aws-sdk-s3 = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
toml = "0.8"
semver = { version = "1", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# HTTP client for GitHub OAuth
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
