[package]
name = "nova"
version = "0.1.0"
description = "Keyboard-driven productivity launcher for Linux"
authors = ["rusen"]
edition = "2021"

[[bin]]
name = "nova"
path = "src/main.rs"

[dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
gdk = "0.18"
glib = "0.18"
gio = "0.18"
pango = "0.18"

# App launcher
freedesktop-desktop-entry = "0.7"
fuzzy-matcher = "0.3"
dirs = "5"
walkdir = "2"

# Utils
once_cell = "1"

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Custom commands
shellexpand = "3"
urlencoding = "2"
