[package]
name = "nova-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
fuzzy-matcher = "0.3"
walkdir = "2"
shellexpand = "3"
urlencoding = "2"
meval = "0.2"
once_cell = "1"
